# SCE

./: .gitignore  README.md  board.py  constants.py  dev-requirements.txt  eval.py  fen.py  main.py  make.py  make_move.py  move_gen.py  perft.py  pyproject.toml  sce.bat  search.py  setup.py  test_eval.py  test_fen.py  test_lct2.py  test_perft.py  uci.py
.github/workflows/: ci.yml
scripts/: smoke_test_artifact.py
tests/: run_perft_checks.py  test_fen.py  test_make_move.py  test_perft.py  test_search.py  test_uci_smoke.py
